--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
-agp = "8.13.2"
-core = "0.0.20"
-kotlin = "2.0.21"
+agp = "9.0.0"
+kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -12,23 +11,29 @@ lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.3"
 composeBom = "2025.09.01"
 
+materialIconsExtended = "1.7.8"
 navigationCompose = "2.9.7"
 hiltNavigationCompose = "1.3.0"
 roomKtx = "2.8.4"
-hiltAndroid = "2.57.1"
-hiltAndroidCompiler = "5.27.1"
-kspVersion = "2.2.20-2.0.4"
-hiltVersion = "2.51.1"
+kspVersion = "2.3.1"
+hiltVersion = "2.59"
 
 material3 = "1.5.0-alpha13"
 runanywhereSdk = "0.16.1"
 
 pdfbox = "2.0.27.0"
-poi = "5.2.3"
-mlkit = "16.0.0"
+mlkit = "16.0.1"
 jsoup = "1.15.4"
+tika = "3.2.3"
+uiTextGoogleFonts = "1.10.2"
+
+pdfViewer = "3.2.0-beta.1"
+docx4j = "8.3.4"
+opencsv = "5.7.1"
+commonmark = "0.21.0"
 
 [libraries]
+androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
@@ -36,10 +41,8 @@ androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx"
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomKtx" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomKtx" }
 
-core = { module = "ai.nexa:core", version.ref = "core" }
-
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltVersion" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -58,16 +61,14 @@ androidx-compose-material3 = { group = "androidx.compose.material3", name = "mat
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 runanywhere-sdk = { module = "io.github.sanchitmonga22:runanywhere-sdk", version.ref = "runanywhereSdk" }
-pdfbox-android = { module = "com.tom-roush:pdfbox-android", version.ref = "pdfbox" }
 
-# PPTX/DOCX
-poi-ooxml = { module = "org.apache.poi:poi-ooxml", version.ref = "poi" }
-
-# OCR
+# OCR (Google's official library)
 mlkit-text-recognition = { module = "com.google.mlkit:text-recognition", version.ref = "mlkit" }
 
-# Web scraping (optional for v1.1)
+# HTML (Industry standard, zero bugs)
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
+
+androidx-compose-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -77,4 +78,5 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 kotlinAndroidKsp = { id = "com.google.devtools.ksp", version.ref ="kspVersion" }
 hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref ="hiltVersion" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
 
