--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "9.0.0"
+datastorePreferences = "1.2.0"
 kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -9,32 +10,31 @@ kotlinxCoroutinesAndroid = "1.10.2"
 kotlinxSerializationJson = "1.10.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.3"
-composeBom = "2025.09.01"
+composeBom = "2026.01.01"
 
 materialIconsExtended = "1.7.8"
 navigationCompose = "2.9.7"
 hiltNavigationCompose = "1.3.0"
+pdfboxAndroid = "2.0.27.0"
 roomKtx = "2.8.4"
-kspVersion = "2.3.1"
+kspVersion = "2.3.5"
 hiltVersion = "2.59"
 
 material3 = "1.5.0-alpha13"
 runanywhereSdk = "0.16.1"
 
-pdfbox = "2.0.27.0"
 mlkit = "16.0.1"
-jsoup = "1.15.4"
-tika = "3.2.3"
+jsoup = "1.22.1"
 uiTextGoogleFonts = "1.10.2"
 
-pdfViewer = "3.2.0-beta.1"
-docx4j = "8.3.4"
-opencsv = "5.7.1"
-commonmark = "0.21.0"
+mockito = "5.21.0"
+robolectric = "4.16.1"
+coroutinesTest = "1.10.2"
 
 [libraries]
 androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
@@ -68,7 +68,23 @@ mlkit-text-recognition = { module = "com.google.mlkit:text-recognition", version
 # HTML (Industry standard, zero bugs)
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 
+# pdf text extractor
+pdfbox-android = { module = "com.tom-roush:pdfbox-android", version.ref = "pdfboxAndroid"}
+
 androidx-compose-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+
+# Mockito (mocking dependencies)
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "5.1.0" }
+
+# Robolectric (Android context in tests)
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+
+# Coroutines Test (testing suspend functions)
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutinesTest" }
+
+# AndroidX Test
+androidx-test-core = { module = "androidx.test:core", version = "1.5.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
